# kd-lab

./: .gitignore  BUILDPLAN.md  DESIGN.md  EXPERIMENTS.md  LICENSE  README.md  START_HERE_PROMPT.md  push_to_github.sh  pyproject.toml  pyproject_additions.toml
.github/workflows/: ci.yml
configs/: calib_opd_rkl.yaml  opd_rkl_smoke.yaml  pointer_chase_base.yaml  smoke_cluster.yaml
kd_lab/distillation/: __init__.py  divergences.py  on_policy.py  sampling.py  supervised.py
kd_lab/evaluation/: metrics.py  positional_kl.py
kd_lab/experiments/: aggregate.py  diagnose_task.py  run.py  run_one.sbatch  slurm_sweep.sh  sweep.py
kd_lab/tasks/: gsm8k.py  pointer_chase.py
results/analysis/: results_table.csv
results/b0_sft_seed0/: metrics.json
results/b0_sft_seed1/: metrics.json
results/b0_sft_seed2/: metrics.json
results/b1_seqkd_seed0/: metrics.json
results/b1_seqkd_seed1/: metrics.json
results/b1_seqkd_seed2/: metrics.json
results/b2_logitkd_seed0/: metrics.json
results/b2_logitkd_seed1/: metrics.json
results/b2_logitkd_seed2/: metrics.json
results/calib_opd_rkl/: metrics.json
results/opd_fkl_seed0/: metrics.json
results/opd_fkl_seed1/: metrics.json
results/opd_fkl_seed2/: metrics.json
results/opd_jsd0.1_seed0/: metrics.json
results/opd_jsd0.1_seed1/: metrics.json
results/opd_jsd0.1_seed2/: metrics.json
results/opd_jsd0.5_seed0/: metrics.json
results/opd_jsd0.5_seed1/: metrics.json
results/opd_jsd0.5_seed2/: metrics.json
results/opd_jsd0.9_seed0/: metrics.json
results/opd_jsd0.9_seed1/: metrics.json
results/opd_jsd0.9_seed2/: metrics.json
results/opd_rkl_lam0.0_seed0/: metrics.json
results/opd_rkl_lam0.0_seed1/: metrics.json
results/opd_rkl_lam0.0_seed2/: metrics.json
results/opd_rkl_lam0.25_seed0/: metrics.json
tests/: test_aggregate.py  test_gsm8k.py  test_phase1.py  test_runner.py  test_sampling.py  test_scaffold.py  test_supervised.py  test_sweep.py  test_trl_oracle.py
writeup/: linkedin.md  medium_article.md  medium_article_outline.md
(+12 files in other folders)
